objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVOC_Id__c</fullName>
        <label>SVOC Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Volume__c</fullName>
        <label>Sales Volume</label>
        <picklist>
            <picklistValues>
                <fullName>$1 TO 2.5 MILLION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_WebEx__c</fullName>
        <label>Scheduled WebEx</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score_Behavioral__c</fullName>
        <description>For Lead scoring</description>
        <label>Score - Behavioral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Demographic__c</fullName>
        <description>For lead scoring</description>
        <label>Score - Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <label>Secondary Contact</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <inlineHelpText>input the name of the Auto Trader rep who submitted the lead</inlineHelpText>
        <label>Submitted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <label>vAuto Territory Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ben Velishek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Beall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline Atkinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Keene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daryle Callahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dennis McCourt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dustin Snyder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Gidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Kujawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Javier Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim McKeever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh Harrington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP Calderon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyla Thompson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc DeBeaumont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martez Logan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martin Yannieh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Kirkland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghan Deparis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nathan Trimble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelson Santana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Adkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shari Shires-Blane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Inc.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <label>Total Employees</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Vehicle_Sales_per_Month_avg__c</fullName>
        <description>Used by ATC Lead Generation email service.</description>
        <inlineHelpText>Used by ATC Lead Generation email service.</inlineHelpText>
        <label>Used Vehicle Sales per Month (avg)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Dealer_ID__c</fullName>
        <description>http://www.pages05.net/mxg-vinsolutions/customer-referral/</description>
        <label>VIN Dealer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Age__c</fullName>
        <formula>(Date_Time_Lead_Validated__c -  CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the hours from the date/time the lead was validated from the date/time it was created</inlineHelpText>
        <label>Validation Age (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vin_Status__c</fullName>
        <label>Vin Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Product__c</fullName>
        <description>Wave Specific field to derive the executive level product name.</description>
        <formula>Case (  Opp_Type__c , &quot;Conquest&quot; ,&quot;Conquest&quot;, &quot;KBB Par&quot;, &quot;Stockwave&quot;,  &quot;AuctionGenius&quot;, &quot;Stockwave&quot;, &quot;Genius Labs&quot;, &quot;Stockwave&quot;, &quot;Provision&quot;, &quot;Provision&quot;, &quot;Stockwave&quot;, &quot;Stockwave&quot;, &quot;Others&quot;)</formula>
        <inlineHelpText>Wave Specific field to derive the executive level product name.</inlineHelpText>
        <label>Wave Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Role__c</fullName>
        <description>Wave Specific field to derive if the role is PM or PS.</description>
        <formula>If ( CONTAINS(  Owner:User.UserRole.Name, &apos;Performance&apos;), If( CONTAINS( Owner:User.UserRole.Name , &apos;vAuto&apos;), &apos;PM&apos;, &apos;Others&apos;), If ( CONTAINS (Owner:User.UserRole.Name , &apos;Product&apos;), If( CONTAINS( Owner:User.UserRole.Name , &apos;vAuto&apos;), &apos;PS&apos;, &apos;Others&apos;), If (CONTAINS (Owner:User.UserRole.Name , &apos;VGL product specialist&apos;), &apos;PS&apos;, &apos;Others&apos;)))</formula>
        <inlineHelpText>Wave Specific field to derive if the role is PM or PS.</inlineHelpText>
        <label>Wave Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_City__c</fullName>
        <label>Web Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Phone__c</fullName>
        <inlineHelpText>phone number that appears on the customer&apos;s website</inlineHelpText>
        <label>Web Address Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Web_Address_Same_as_Physical__c</fullName>
        <label>Web Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_State__c</fullName>
        <label>Web Address State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_Street__c</fullName>
        <label>Web Address Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Zipcode__c</fullName>
        <label>Web Address Zipcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Site_Company__c</fullName>
        <description>Sage Island
MDOL</description>
        <label>Web Site Company</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Con X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadatrader.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>carbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarThink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>carweek.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler Five Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clickmotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data one software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Car Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealerfeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Made</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Site_Contract_End__c</fullName>
        <inlineHelpText>Month and Year required. Type full month and year, example. March 2008</inlineHelpText>
        <label>Web Site Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Webex_Status__c</fullName>
        <label>Webex Status</label>
        <picklist>
            <picklistValues>
                <fullName>Webex Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Won_t_be_at_NADA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>http://www.pages05.net/mxg-vinsolutions/nada-appointment/</description>
        <inlineHelpText>NADA 2015 Campaign</inlineHelpText>
        <label>Won&apos;t be at NADA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_the_customer_like_a_demo__c</fullName>
        <label>Would the customer like a demo?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Users_on_System_Total_Sales_Staff__c</fullName>
        <label># of Users on System/Total Sales Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vAuto_Conquest_Region__c</fullName>
        <label>vAuto Conquest Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vAuto_Conquest_Territory_Owner__c</fullName>
        <label>vAuto Conquest Territory Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Andrew Harper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burke Noonan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Doyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frederick Ziegel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Perez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Mosley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Bohach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Wroble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rick Ziegel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Beseth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Tiede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Buhrmaster</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vAuto_Conquest_Territory__c</fullName>
        <label>vAuto Conquest Territory</label>
        <picklist>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appalachia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - IMPERIAL COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - ORANGE COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - RIVERSIDE COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - SAN DIEGO COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN NEW YORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN PENNSYLVANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL PASO TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA - PENSACOLA WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWAII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOWA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vAuto_Region__c</fullName>
        <label>vAuto Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolina&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern California &amp; Reno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY/NJ Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocky Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appalachia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vAuto_Status__c</fullName>
        <description>Status of vAuto from ATG Core SF org.</description>
        <inlineHelpText>Status of vAuto from ATG Core SF org.</inlineHelpText>
        <label>vAuto Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Territory__c</fullName>
        <label>vAuto Territory</label>
        <picklist>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - IMPERIAL COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - ORANGE COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - RIVERSIDE COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA - SAN DIEGO COUNTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN NEW YORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN PENNSYLVANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL PASO TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA - PENSACOLA WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWAII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTUCKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOUISIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ALL_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Validated__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Leads</label>
    </listViews>
</CustomObject>